# turboquant

./: .coverage  .gitattributes  .gitignore  CHANGELOG.md  HARBOR.md  OPTIMIZATION.md  README.md  SERVING.md  __init__.py  benchmark_decode.py  benchmark_openai.py  benchmark_tq_comparison.py  benchmark_tq_results.tsv  compressors.py  harbor-apply.sh  harbor-revert.sh  lloyd_max.py  ollama_resolver.py  requirements.txt  run_llama70b_tq.sh  run_qwen72b_tq.sh  serve_ollama_tq.sh  serve_turboquant_vllm.sh  setup.py  test_turboquant.py  turboquant.py  validate.py  validate_vllm.py
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
autoresearch/: evaluate.py  policy.py
docs/: OLLAMA_NATIVE.md  TQ4P_GPU_VALIDATION.md
patches/stage2-qjl/cuda/: CMakeLists.txt  CUDA_IMPL_PLAN.md  PLAN.md  tqp-constants-cuda.cuh  tqp-dequantize.cu  tqp-kernels.cuh  tqp-prepare-query.cu  tqp-quantize.cu  tqp-set-rows.cu  tqp-staging.cu  tqp-staging.cuh  tqp-vec-dot.cu
scripts/: LLOYD_MAX_RESULTS.md  bench_kv_memory.sh  bench_prefill_tq4p.sh  build_ollama_tq.sh  bump_ollama_ref.sh  lloyd_max_sanity.py  patch_ollama_kv_types.sh  profile_tp2_pipeline.py  smoke_test_tq4p.sh  test_tq4p_inspect.py  tq4p_inspect.py
tests/: conftest.py  test_apply_go_plumbing.py  test_core.py  test_cuda_gpu.py  test_fast_decode.py  test_fused_compress.py  test_ollama_resolver.py  test_stability.py  test_triton_kernels.py  test_vllm_plugin.py
vllm_plugin/: README.md  __init__.py  attention.py  attention_hybrid.py  compress_utils.py  config.py  kv_spec.py  platform.py  triton_kernels.py  triton_wrapper.py  (+1 more)
(+40 files in other folders)
